--- a/templates/base.html
+++ b/templates/base.html
@@ -26,16 +26,12 @@
                 </a>
                 <hr class="sidebar-divider my-0">
                 <ul class="navbar-nav text-light" id="accordionSidebar">
-                    <li class="nav-item"><a class="nav-link" href="#"><i
-                                class="fas fa-tachometer-alt"></i><span>Dashboard</span></a></li>
-                    <li class="nav-item"><a class="nav-link" href="#"><i
-                                class="fas fa-user"></i><span>Profile</span></a></li>
-                    <li class="nav-item"><a class="nav-link" href="#"><i class="fas fa-table"></i><span>Table</span></a>
-                    </li>
-                    <li class="nav-item"><a class="nav-link" href="#"><i
-                                class="far fa-user-circle"></i><span>Login</span></a></li>
-                    <li class="nav-item"><a class="nav-link" href="#"><i
-                                class="fas fa-user-circle"></i><span>Register</span></a></li>
+                    <ul class="navbar-nav text-light" id="accordionSidebar">
+                        <li class="nav-item"><a class="nav-link" href="{% url 'dashboard' %}"><i class="fas fa-tachometer-alt"></i><span>Dashboard</span></a></li>
+                        <li class="nav-item"><a class="nav-link" href="#"><i class="fas fa-table"></i><span>Devices table</span></a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'camera' %}"><i class="fa fa-camera"></i><span>camera</span></a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'logout_account' %}"><i class="far fa-user-circle"></i><span>Logout</span></a></li>
+                    </ul>
                 </ul>
                 <div class="text-center d-none d-md-inline"><button class="btn rounded-circle border-0"
                         id="sidebarToggle" type="button"></button></div>
