--- a/templates/login.html
+++ b/templates/login.html
@@ -79,21 +79,21 @@
 
 
 	<!--===============================================================================================-->
-	<script src="vendor/jquery/jquery-3.2.1.min.js"></script>
+	<script src="{% static 'login/vendor/jquery/jquery-3.2.1.min.js'%}"></script>
 	<!--===============================================================================================-->
-	<script src="vendor/bootstrap/js/popper.js"></script>
-	<script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+	<script src="{% static 'login/vendor/bootstrap/js/popper.js'%}"></script>
+	<script src="{% static 'login/vendor/bootstrap/js/bootstrap.min.js'%}"></script>
 	<!--===============================================================================================-->
-	<script src="vendor/select2/select2.min.js"></script>
+	<script src="{% static 'login/vendor/select2/select2.min.js"'%}></script>
 	<!--===============================================================================================-->
-	<script src="vendor/tilt/tilt.jquery.min.js"></script>
+	<script src="{% static 'login/vendor/tilt/tilt.jquery.min.js'%}"></script>
 	<script>
 		$('.js-tilt').tilt({
 			scale: 1.1
 		})
 	</script>
 	<!--===============================================================================================-->
-	<script src="js/main.js"></script>
+	<script src="{% static 'login/js/main.js"'%}></script>
 
 </body>
 
