complete device table

--- a/templates/base.html
+++ b/templates/base.html
@@ -28,7 +28,7 @@
                 <ul class="navbar-nav text-light" id="accordionSidebar">
                     <ul class="navbar-nav text-light" id="accordionSidebar">
                         <li class="nav-item"><a class="nav-link" href="{% url 'dashboard' %}"><i class="fas fa-tachometer-alt"></i><span>Dashboard</span></a></li>
-                        <li class="nav-item"><a class="nav-link" href="#"><i class="fas fa-table"></i><span>Devices table</span></a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'table' %}"><i class="fas fa-table"></i><span>Devices table</span></a></li>
                         <li class="nav-item"><a class="nav-link" href="{% url 'camera' %}"><i class="fa fa-camera"></i><span>camera</span></a></li>
                         <li class="nav-item"><a class="nav-link" href="{% url 'logout_account' %}"><i class="far fa-user-circle"></i><span>Logout</span></a></li>
                     </ul>
